--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,53 +1,59 @@
-# 构建 VitePress 站点并将其部署到 GitHub Pages 的示例工作流程
 name: Deploy VitePress site to Pages
 
 on:
   push:
-    branches: [main] # 如果你用 master 分支，改为 master
-  workflow_dispatch: # 允许手动触发
+    branches: [main]
+  workflow_dispatch:
 
-# 设置 GITHUB_TOKEN 的权限
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# 并发控制：避免重复部署
 concurrency:
   group: pages
   cancel-in-progress: false
 
 jobs:
-  # 构建工作
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v5
         with:
-          fetch-depth: 0 # 用于 VitePress 的 lastUpdated 功能
+          fetch-depth: 0
 
-      - name: Setup Node
+      # 步骤1：安装 pnpm（关键修复：指定安装方式，确保 PATH 生效）
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        id: pnpm-install
+        with:
+          version: 9.1.0 # 指定具体版本，避免 latest 版本兼容问题
+          run_install: false # 先不自动安装依赖，后续手动执行
+
+      # 步骤2：设置 Node 环境，并关联 pnpm 缓存
+      - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: 24 # 和你本地 Node 版本保持一致（可改为 20/18）
-          cache: pnpm # 基于 npm 缓存依赖
+          node-version: 20 # 推荐 LTS 版本，稳定性更高
+          cache: 'pnpm'
+          cache-dependency-path: './pnpm-lock.yaml' # 明确指定 pnpm 锁文件路径
+
+      # 步骤3：手动安装依赖（此时 pnpm 已在 PATH 中）
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
-      - name: Install dependencies
-        run: pnpm install # 替换 npm ci 为 npm install，兼容无锁文件场景（后续建议提交锁文件）
-
       - name: Build with VitePress
-        run: pnpm run docs:build # 确保 package.json 中有这个脚本
+        run: pnpm run docs:build # 确保 package.json 中有 docs:build 脚本
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/.vitepress/dist # 确认 VitePress 构建输出目录正确
+          path: docs/.vitepress/dist
 
-  # 部署工作
   deploy:
     environment:
       name: github-pages
